--- a/manual/plugins/cube.tex
+++ b/manual/plugins/cube.tex
@@ -5,9 +5,9 @@ This is a rotating cube screen saver in 3D.
     \begin{btnmap}{}{}
     \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonRight}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IRIVER_H100_PAD%
+        ,IRIVER_H300_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
-    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
@@ -17,7 +17,8 @@ This is a rotating cube screen saver in 3D.
         ,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+    \opt{GIGABEAT_PAD}{\ButtonSelect}
+    \opt{SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonUp}
        \opt{HAVEREMOTEKEYMAP}{& }
         & Pause\\
     \opt{PLAYER_PAD,ONDIO_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
@@ -26,7 +27,7 @@ This is a rotating cube screen saver in 3D.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
+    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonDown}
        \opt{HAVEREMOTEKEYMAP}{& }
         & Cycle draw mode\\
     \opt{PLAYER_PAD}{\ButtonOn+\ButtonRight{} / \ButtonOn+\ButtonLeft}
