--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -29,27 +29,27 @@ found at \url{http://www.mame.net}.
 \begin{table}
   \begin{btnmap}{}{}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
-        IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonRight}
-    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp}
+        IPOD_3G_PAD,h10,MROBE100_PAD}{\ButtonRight}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonUp}
     \opt{h10_5gb}{\ButtonScrollUp}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Up\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
-    IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonLeft}
+    IPOD_3G_PAD,h10,MROBE100_PAD}{\ButtonLeft}
     \opt{h10_5gb}{\ButtonScrollDown}
-    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonDown}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Down\\
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{h10}{\ButtonScrollUp}
-    \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
+    \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonLeft}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Left\\
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonDown}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{h10}{\ButtonScrollDown}
-    \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonRight}
+    \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonRight}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Right\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
