Sansa Fuze : add plugin keymaps to the manual
Except for snake, snake2, and blackjack for which the manual seems to be
out of date with the plugin (all these plugins now use a menu)

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23033 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/invadrox.tex
+++ b/manual/plugins/invadrox.tex
@@ -13,7 +13,7 @@ increase speed, drop down and reverse direction after every pass!
     %
     \opt{IRIVER_H100_PAD}{\ButtonOn}
     \opt{IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,IAUDIO_X5_PAD%
-        ,GIGABEAT_PAD,SANSA_E200_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+        ,GIGABEAT_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Fire \\
@@ -21,6 +21,7 @@ increase speed, drop down and reverse direction after every pass!
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,%
         SANSA_E200_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
