--- a/manual/plugins/midiplay.tex
+++ b/manual/plugins/midiplay.tex
@@ -18,7 +18,7 @@ might experience ``Buffer miss!'' with many files, except simple ones.}
     \begin{btnmap}{}{}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
         ,IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonUp/ \ButtonDown}
-    \opt{IPOD_3G_PAD,IPOD_4G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd/ \ButtonScrollBack}
+    \opt{IPOD_3G_PAD,IPOD_4G_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd/ \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/ \ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolUp/ \ButtonVolDown}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -30,7 +30,7 @@ might experience ``Buffer miss!'' with many files, except simple ones.}
     %
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_S_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonUp}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -40,6 +40,7 @@ might experience ``Buffer miss!'' with many files, except simple ones.}
     \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IAUDIO_X5_PAD%
         ,IRIVER_H10_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Stop playback and quit\\
     \end{btnmap}
