--- a/manual/plugins/mpegplayer.tex
+++ b/manual/plugins/mpegplayer.tex
@@ -31,7 +31,7 @@ option and choose \setting{mpegplayer}.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Open the MPEG Player menu\\
 \end{btnmap}
