--- a/manual/plugins/rockpaint.tex
+++ b/manual/plugins/rockpaint.tex
@@ -100,9 +100,10 @@ if you select Exit, so any unsaved changes will be lost.}
 \begin{table}
 \begin{btnmap}{}{}
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{
-        \nopt{IRIVER_H300_PAD,GIGABEAT_S_PAD}{\ButtonPower}
+        \nopt{IRIVER_H300_PAD,GIGABEAT_S_PAD,SANSA_FUZE_PAD}{\ButtonPower}
         \opt{IRIVER_H300_PAD}{\ButtonOff}
         \opt{GIGABEAT_S_PAD}{\ButtonBack}
+        \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
           \opt{HAVEREMOTEKEYMAP}{& }
         & Quits Rockpaint immediately.\\
     }
@@ -130,6 +131,7 @@ if you select Exit, so any unsaved changes will be lost.}
     \opt{IRIVER_H300_PAD}{\ButtonOn}%
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect+\ButtonMenu}%
     \opt{SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonSelect+\ButtonPower}%
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}%
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}%
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}%
     \opt{IRIVER_H10_PAD}{\ButtonPlay}%
@@ -137,6 +139,7 @@ if you select Exit, so any unsaved changes will be lost.}
     & Displays the Main Menu.\\
 
     \opt{IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonRec}
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonLeft}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
