--- a/manual/plugins/sudoku.tex
+++ b/manual/plugins/sudoku.tex
@@ -30,7 +30,8 @@ settings.
 \begin{table}
     \begin{btnmap}{}{}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+        ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+        ,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
@@ -45,7 +46,7 @@ settings.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonLeft{} / \ButtonRight}
     \opt{IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{SANSA_E200_PAD}{\ButtonScrollBack{} / \ButtonScrollFwd}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollBack{} / \ButtonScrollFwd}
     \opt{SANSA_C200_PAD}{\ButtonSelect{} / \ButtonVolUp{} / \ButtonVolDown}
   \opt{HAVEREMOTEKEYMAP}{& }
     & Change number under the cursor\\
@@ -56,7 +57,7 @@ settings.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonLeft{} / \ButtonRight}
     \opt{IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{Long \ButtonRew}
-    \opt{SANSA_E200_PAD}{Long \ButtonScrollBack{} / \ButtonScrollFwd}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{Long \ButtonScrollBack{} / \ButtonScrollFwd}
     \opt{SANSA_C200_PAD}{Long \ButtonSelect{} / \ButtonVolUp{} / \ButtonVolDown}
   \opt{HAVEREMOTEKEYMAP}{& }
     & Constantly changing the number under the cursor\\
@@ -67,6 +68,7 @@ settings.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonSelect}
+    \opt{SANSA_FUZE_PAD}{\ButtonHome}
     \opt{SANSA_C200_PAD}{\ButtonPower}
   \opt{HAVEREMOTEKEYMAP}{& }
     & Open Menu\\
@@ -74,6 +76,7 @@ settings.
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD}{\ButtonA}
@@ -84,6 +87,7 @@ settings.
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
       ,MROBE100_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Menu $\rightarrow$ Quit}
     \opt{SANSA_C200_PAD}{Long \ButtonPower}
   \opt{HAVEREMOTEKEYMAP}{& }
