--- a/manual/plugins/zxbox.tex
+++ b/manual/plugins/zxbox.tex
@@ -16,14 +16,14 @@ including an additional but fixed menu button, are assigned as follows:
     \begin{btnmap}{}{}
     \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu/\ButtonPlay/}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
-        ,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp/\ButtonDown/}
+        ,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,MROBE100_PAD}{\ButtonUp/\ButtonDown/}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown/}
     \ButtonLeft/\ButtonRight
   \opt{HAVEREMOTEKEYMAP}{& }
     & Directional movement\\
     %
     \opt{IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,IAUDIO_X5_PAD%
-        ,SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonSelect}
+        ,SANSA_C200_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
@@ -37,6 +37,7 @@ including an additional but fixed menu button, are assigned as follows:
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
   \opt{HAVEREMOTEKEYMAP}{& }
