--- a/manual/plugins/dice.tex
+++ b/manual/plugins/dice.tex
@@ -10,7 +10,7 @@ numbers as well as the total of the rolled dice.
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{PLAYER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
         ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPlay}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonUp}
        \opt{HAVEREMOTEKEYMAP}{& 
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCOn}
         }
@@ -20,6 +20,7 @@ numbers as well as the total of the rolled dice.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
         ,IRIVER_H10_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& 
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
