--- a/manual/plugins/doom.tex
+++ b/manual/plugins/doom.tex
@@ -56,6 +56,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
     \opt{IPOD_3G_PAD,IPOD_4G_PAD}{flipping your \ButtonHold{} switch a couple of times}%
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD, SANSA_C200_PAD%
          ,GIGABEAT_PAD,GIGABEAT_S_PAD}{pressing \ButtonPower}%
+    \opt{SANSA_FUZE_PAD}{pressing \ButtonHome}
 
   \emph{New Game. } Start a new game\\
   \emph{Options. } In game options\\
@@ -77,7 +78,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
 \subsubsection{Keys}
 \begin{table}
 \begin{btnmap}{}{}
-  \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
+  \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD%
       ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
   \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
@@ -85,7 +86,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
     & Move Forward \\
 %
   \nopt{IPOD_3G_PAD,IPOD_4G_PAD}{
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -102,7 +103,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
   \opt{IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
-  \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+  \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
@@ -113,6 +114,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
   \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+  \opt{SANSA_FUZE_PAD}{\ButtonPower}
   \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Open \\
@@ -121,11 +123,13 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonHold{} switch}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPower}
+  \opt{SANSA_FUZE_PAD}{\ButtonHome}
        \opt{HAVEREMOTEKEYMAP}{& }
     & InGame Menu \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_3G_PAD,IPOD_4G_PAD,IAUDIO_X5_PAD%
-      ,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
+      ,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD%
+      ,MROBE100_PAD}{\ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Enter \\
@@ -134,7 +138,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonSelect}
   \opt{IAUDIO_X5_PAD}{\ButtonRec}
   \opt{IRIVER_H10_PAD}{\ButtonFF}
-  \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
+  \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd}
   \opt{SANSA_C200_PAD}{\ButtonVolUp}
   \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
        \opt{HAVEREMOTEKEYMAP}{& }
