--- a/manual/plugins/flipit.tex
+++ b/manual/plugins/flipit.tex
@@ -9,7 +9,8 @@ a screen containing tokens of only one colour.
 \begin{btnmap}{}{}
 \opt{PLAYER_PAD}{\ButtonOn{} / \ButtonMenu{} / \ButtonLeft{} / \ButtonRight}
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-    ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+    ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+    ,MROBE100_PAD}
     {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay{} / \ButtonLeft{} / \ButtonRight}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
@@ -18,7 +19,8 @@ a screen containing tokens of only one colour.
 \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonPlay}
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
-    ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+    ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+    ,MROBE100_PAD}
     {\ButtonSelect}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -30,6 +32,7 @@ a screen containing tokens of only one colour.
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay+\ButtonLeft}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonLeft}
+\opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonLeft}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Shuffle \\
@@ -40,6 +43,7 @@ a screen containing tokens of only one colour.
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay+\ButtonRight}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonRight}
+\opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
 \opt{MROBE100_PAD}{\ButtonPlay}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -52,6 +56,7 @@ a screen containing tokens of only one colour.
 \opt{IAUDIO_X5_PAD}{\ButtonPlay+\ButtonUp}
 \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollUp}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonSelect}
+\opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonRight}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
 \opt{MROBE100_PAD}{\ButtonDisplay}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -60,6 +65,7 @@ a screen containing tokens of only one colour.
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_C200_PAD}{\ButtonPower}
+\opt{SANSA_FUZE_PAD}{Long \ButtonHome}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& 
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
