--- a/manual/plugins/jewels.tex
+++ b/manual/plugins/jewels.tex
@@ -16,7 +16,8 @@ In the mode puzzle the aim of the game is to connect the puzzles, by skilful swa
   \begin{btnmap}{}{}
     \ButtonLeft/\ButtonRight/
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
-      ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
+      ,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD%
+      ,GIGABEAT_S_PAD}
       {\ButtonUp/\ButtonDown}
     \opt{IPOD_4G_PAD}{\ButtonMenu/\ButtonPlay}
     \opt{IPOD_3G_PAD}{\ButtonScrollBack/\ButtonScrollFwd}
@@ -26,12 +27,14 @@ In the mode puzzle the aim of the game is to connect the puzzles, by skilful swa
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
-      ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
+      ,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD%
+      ,GIGABEAT_S_PAD}
       {\ButtonSelect}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Select a jewel \\
     \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
       ,IAUDIO_X5_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{IPOD_3G_PAD}{\ButtonMenu}
     \opt{IPOD_4G_PAD}{\ButtonSelect+ \ButtonMenu}
