--- a/manual/plugins/jpegviewer.tex
+++ b/manual/plugins/jpegviewer.tex
@@ -15,7 +15,8 @@ view a bigger file you may need to stop playback.}
 \begin{table}
 \begin{btnmap}{}{}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+      ,MROBE100_PAD}
       {\ButtonUp\ / \ButtonDown}%
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu\ / \ButtonPlay}%
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp\ / \ButtonScrollDown} %
@@ -25,7 +26,7 @@ view a bigger file you may need to stop playback.}
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-        ,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
+        ,SANSA_FUZE_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
@@ -35,7 +36,7 @@ view a bigger file you may need to stop playback.}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonDown}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack}
-    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
+    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{Long \ButtonPlay}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonPlay}
@@ -48,7 +49,7 @@ view a bigger file you may need to stop playback.}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_PAD}{\ButtonA+\ButtonRight}
     \opt{GIGABEAT_S_PAD}{\ButtonNext}
@@ -61,7 +62,7 @@ view a bigger file you may need to stop playback.}
     \opt{IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{SANSA_E200_PAD}{\ButtonScrollBack}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollBack}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{GIGABEAT_PAD}{\ButtonA+\ButtonLeft}
     \opt{GIGABEAT_S_PAD}{\ButtonPrev}
@@ -76,6 +77,7 @@ view a bigger file you may need to stop playback.}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{&
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
