--- a/manual/plugins/metronome.tex
+++ b/manual/plugins/metronome.tex
@@ -8,6 +8,7 @@ on the appropriate button.
     \opt{PLAYER_PAD}{\ButtonStop}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{ONDIO_PAD,RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -17,13 +18,13 @@ on the appropriate button.
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu\ (Long: Stop)}
     \opt{GIGABEAT_PAD}{\ButtonA}
-    \opt{SANSA_E200_PAD}{\ButtonUp}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonUp}
        \opt{HAVEREMOTEKEYMAP}{& }
         & Start / Stop \\
     \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu\ (repeatedly)}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD%
-        ,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD}{\ButtonSelect}
+        ,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -34,7 +35,7 @@ on the appropriate button.
     \opt{PLAYER_PAD}{\ButtonOn+\ButtonLeft\ / \ButtonOn+\ButtonRight}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp\ / \ButtonDown}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd\ / \ButtonScrollBack}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd\ / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp\ / \ButtonScrollDown}
        \opt{HAVEREMOTEKEYMAP}{& }
         & Adjust volume \\
