--- a/manual/plugins/minesweeper.tex
+++ b/manual/plugins/minesweeper.tex
@@ -3,7 +3,7 @@
 \screenshot{plugins/images/ss-minesweeper}{Minesweeper plugin}{img:minesweeper}
 The classic game of minesweeper. Use 
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-     ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}
+     ,SANSA_E200_PAD,SANSA_FUZE_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}
     {the \ButtonUp\ and \ButtonDown\ keys}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd/\ButtonScrollBack }
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
@@ -12,7 +12,7 @@ then press the
 \opt{RECORDER_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
-     ,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+     ,SANSA_FUZE_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
 \opt{IAUDIO_X5_PAD}{\ButtonRec}
 \opt{IRIVER_H10_PAD}{\ButtonFF}key to begin.
 
@@ -27,8 +27,9 @@ the location of a mine, it can be tagged to avoid accidentally
 \begin{table}
  \begin{btnmap}{}{}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay{} / \ButtonLeft{} / \ButtonRight}
-  \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-      ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+  \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
+      ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+      ,MROBE100_PAD}
       {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
   \opt{IRIVER_H10_PAD}
       {\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
@@ -45,6 +46,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
   \opt{SANSA_E200_PAD}{\ButtonRec}
+  \opt{SANSA_FUZE_PAD}{\ButtonScrollFwd}
   \opt{SANSA_C200_PAD}{\ButtonSelect{} / \ButtonVolDown}
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
@@ -54,7 +56,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{RECORDER_PAD}{\ButtonFTwo/\ButtonPlay}
   \opt{ONDIO_PAD}{Long \ButtonMenu}
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
+      ,SANSA_FUZE_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{SANSA_C200_PAD}{Long \ButtonSelect{} / \ButtonVolUp}
@@ -67,6 +69,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
   \opt{IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{SANSA_E200_PAD}{Long \ButtonRec}
+  \opt{SANSA_FUZE_PAD}{\ButtonScrollBack}
   \opt{IRIVER_H10_PAD}{\ButtonRew+\ButtonPlay}
   \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -74,6 +77,7 @@ the location of a mine, it can be tagged to avoid accidentally
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+  \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& 
