--- a/manual/plugins/mosaic.tex
+++ b/manual/plugins/mosaic.tex
@@ -13,5 +13,6 @@ Press
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}%
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
   ,MROBE100_PAD}{\ButtonPower}%
+\opt{SANSA_FUZE_PAD}{Long \ButtonHome}%
 \opt{GIGABEAT_S_PAD}{\ButtonBack} %
 to quit.
