--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -29,24 +29,24 @@ found at \url{http://www.mame.net}.
 \begin{table}
   \begin{btnmap}{}{}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
-        IPOD_3G_PAD,h10,MROBE100_PAD}{\ButtonRight}
+        IPOD_3G_PAD,h10,MROBE100_PAD,SANSA_FUZE_PAD}{\ButtonRight}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonUp}
     \opt{h10_5gb}{\ButtonScrollUp}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Up\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
-    IPOD_3G_PAD,h10,MROBE100_PAD}{\ButtonLeft}
+    IPOD_3G_PAD,h10,MROBE100_PAD,SANSA_FUZE_PAD}{\ButtonLeft}
     \opt{h10_5gb}{\ButtonScrollDown}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonDown}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Down\\
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonUp}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,MROBE100_PAD,SANSA_FUZE_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{h10}{\ButtonScrollUp}
     \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonLeft}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Left\\
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonDown}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,MROBE100_PAD,SANSA_FUZE_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{h10}{\ButtonScrollDown}
     \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD}{\ButtonRight}
@@ -55,14 +55,14 @@ found at \url{http://www.mame.net}.
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonDown}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Insert Coin\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
-        ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+        ,SANSA_E200_PAD,SANSA_FUZE_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
       \opt{HAVEREMOTEKEYMAP}{& }
     & 1-Player Start\\
@@ -77,6 +77,7 @@ found at \url{http://www.mame.net}.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{\ButtonHome}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Menu\\
