--- a/manual/plugins/pegbox.tex
+++ b/manual/plugins/pegbox.tex
@@ -16,6 +16,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IAUDIO_X5_PAD}{\ButtonUp, \ButtonDown, }
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown, }
     \opt{SANSA_E200_PAD}{\ButtonUp, \ButtonDown, }
+    \opt{SANSA_FUZE_PAD}{\ButtonUp, \ButtonDown, }
     \opt{GIGABEAT_PAD}{\ButtonUp, \ButtonDown, }
     \opt{GIGABEAT_S_PAD}{\ButtonUp, \ButtonDown, }
     \opt{MROBE100_PAD}{\ButtonUp, \ButtonDown, }
@@ -28,6 +29,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IAUDIO_X5_PAD}{\ButtonLeft, \ButtonRight}
     \opt{IRIVER_H10_PAD}{\ButtonLeft, \ButtonRight}
     \opt{SANSA_E200_PAD}{\ButtonLeft, \ButtonRight}
+    \opt{SANSA_FUZE_PAD}{\ButtonLeft, \ButtonRight}
     \opt{GIGABEAT_PAD}{\ButtonLeft, \ButtonRight}
     \opt{GIGABEAT_S_PAD}{\ButtonLeft, \ButtonRight}
     \opt{MROBE100_PAD}{\ButtonLeft, \ButtonRight}
@@ -43,6 +45,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IAUDIO_X5_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonSelect}
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect}
     \opt{GIGABEAT_PAD}{\ButtonSelect}
     \opt{GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{MROBE100_PAD}{\ButtonSelect}
@@ -57,6 +60,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{Long \ButtonFF}
     \opt{SANSA_E200_PAD}{\ButtonRec}
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonLeft}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonPlay}
@@ -71,6 +75,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF + \ButtonScrollUp}
     \opt{SANSA_E200_PAD}{\ButtonScrollBack}
+    \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonUp}
     \opt{GIGABEAT_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonMenu}
@@ -84,6 +89,7 @@ block and crosses which allow you to choose a replacement block.
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
         \opt{IRIVER_H10_PAD}{\ButtonFF + \ButtonScrollDown}
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
+        \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}
         \opt{SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
         \opt{MROBE100_PAD}{\ButtonDisplay}
       \opt{HAVEREMOTEKEYMAP}{& }
@@ -97,6 +103,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IAUDIO_X5_PAD}{\ButtonPower}
     \opt{IRIVER_H10_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{MROBE100_PAD}{\ButtonPower}
