--- a/manual/plugins/pictureflow.tex
+++ b/manual/plugins/pictureflow.tex
@@ -63,7 +63,7 @@ aware:
         \opt{IPOD_1G2G_PAD,IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_PAD,%
              GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
         \opt{IAUDIO_X5_PAD}{\ButtonRec}
-        \opt{SANSA_E200_PAD}{\ButtonDown}
+        \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonDown}
         \opt{IRIVER_H10_PAD,SANSA_C200_PAD}{\ButtonPower}
         \opt{RECORDER_PAD}{\ButtonFOne}
         \opt{ONDIO_PAD}{Long \ButtonMenu}
@@ -75,6 +75,7 @@ aware:
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
         \opt{IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,%
              MROBE100_PAD}{\ButtonPower}
+        \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
         \opt{SANSA_C200_PAD,IRIVER_H10_PAD}{Long \ButtonPower}
         \opt{IPOD_1G2G_PAD,IPOD_3G_PAD,IPOD_4G_PAD}{Long \ButtonMenu}
            \opt{HAVEREMOTEKEYMAP}{&
