--- a/manual/plugins/plasma.tex
+++ b/manual/plugins/plasma.tex
@@ -11,8 +11,9 @@ Plasma is a demo displaying a 80's style retro plasma effect.
       \opt{HAVEREMOTEKEYMAP}{& }
     & Adjust frequency\\
     \opt{lcd_color}{
-        \opt{IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
-            ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+        \opt{IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
+            ,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+            ,MROBE100_PAD}
             {\ButtonSelect}
         \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
            \opt{HAVEREMOTEKEYMAP}{& }
@@ -22,6 +23,7 @@ Plasma is a demo displaying a 80's style retro plasma effect.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
         {\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
       \opt{HAVEREMOTEKEYMAP}{&
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
