--- a/manual/plugins/pong.tex
+++ b/manual/plugins/pong.tex
@@ -5,7 +5,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
 \begin{table}
     \begin{btnmap}{}{}
     \opt{RECORDER_PAD}{\ButtonFOne}
-    \opt{ONDIO_PAD,SANSA_E200_PAD}{\ButtonLeft}
+    \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_FUZE_PAD}{\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
@@ -17,14 +17,14 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonLeft}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-      ,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
+      ,SANSA_FUZE_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonLeft}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Left player down\\
     \opt{RECORDER_PAD}{\ButtonFThree}
-    \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
+    \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonRight}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
@@ -33,7 +33,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{MROBE100_PAD}{\ButtonPlay}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Right player up\\
-    \opt{RECORDER_PAD,SANSA_E200_PAD}{\ButtonRight}
+    \opt{RECORDER_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonRight}
     \opt{ONDIO_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD}{\ButtonPlay}
@@ -46,6 +46,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
       ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{\ButtonHome}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
       \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
