--- a/manual/plugins/rockboy.tex
+++ b/manual/plugins/rockboy.tex
@@ -12,8 +12,9 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
 \subsubsection{Default keys}
 \begin{table}
     \begin{btnmap}{}{}
-    \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-        ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp{} / \ButtonDown}
+    \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
+        ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+        ,GIGABEAT_S_PAD}{\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD}{Tap \ButtonPlay{} / \ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     / \ButtonLeft{} / \ButtonRight
@@ -25,7 +26,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IRIVER_H300_PAD}{\ButtonRec}
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Top-Right}}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
        \opt{HAVEREMOTEKEYMAP}{& }
     & A button\\
@@ -35,6 +36,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Top-Left}}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+    \opt{SANSA_FUZE_PAD}{\ButtonPower}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -45,7 +47,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Bottom-Right} /~Press \ButtonSelect}
     \opt{IAUDIO_X5_PAD}{\ButtonSelect}
-    \opt{SANSA_E200_PAD}{\ButtonScrollBack}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollBack}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{GIGABEAT_PAD}{\ButtonA}
@@ -57,7 +59,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
         \opt{RECORDER_PAD}{\ButtonPlay}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonSelect}
         \opt{IPOD_4G_PAD}{Tap \btnfnt{Bottom-Left}}
-        \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
+        \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonVolUp}
         \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
                \opt{HAVEREMOTEKEYMAP}{& }
@@ -74,7 +76,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{RECORDER_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IRIVER_H100_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD}{\ButtonHold{} switch}
-    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IRIVER_H10_PAD}{\ButtonPower}
+    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,IRIVER_H10_PAD}{\ButtonPower}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Open Rockboy menu\\
