--- a/manual/plugins/sliding.tex
+++ b/manual/plugins/sliding.tex
@@ -9,7 +9,8 @@ Key controls:
 \begin{table}
   \begin{btnmap}{}{}
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+      ,MROBE100_PAD}
     {\ButtonLeft, \ButtonRight, \ButtonUp\ and \ButtonDown}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}
     {\ButtonLeft{} / \ButtonRight{} / \ButtonMenu{} / \ButtonPlay}
@@ -23,6 +24,7 @@ Key controls:
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonSelect}
   \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+  \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -33,7 +35,7 @@ Key controls:
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
-  \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+  \opt{SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
   \opt{GIGABEAT_S_PAD}{\ButtonMenu}
@@ -43,6 +45,7 @@ Key controls:
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
       ,MROBE100_PAD}{\ButtonPower}
+  \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& 
