--- a/manual/plugins/sokoban.tex
+++ b/manual/plugins/sokoban.tex
@@ -16,7 +16,8 @@ information about the level format, see
 \multicolumn{2}{c}{\textbf{In game}} \\
 \hline
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD%
-    ,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}
+    ,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD%
+    ,SANSA_FUZE_PAD,SANSA_C200_PAD}
     {\ButtonUp, \ButtonDown, }%
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu, \ButtonPlay, }%
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown, }%
@@ -26,6 +27,7 @@ information about the level format, see
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
+\opt{SANSA_FUZE_PAD}{Long \ButtonHome}
 \opt{GIGABEAT_S_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{&
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
@@ -39,7 +41,7 @@ information about the level format, see
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollDown}
     \opt{GIGABEAT_PAD,SANSA_C200_PAD}{\ButtonVolDown}
     \opt{MROBE10_PAD}{\ButtonDisplay}
-    \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonDown}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}
     \opt{GIGABEAT_S_PAD}{\ButtonPrev}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Back to previous level \\
@@ -51,7 +53,7 @@ information about the level format, see
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonRight}
     \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
-    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect+\ButtonRight}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect+\ButtonRight}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Restart level \\
@@ -65,14 +67,14 @@ information about the level format, see
     \opt{GIGABEAT_PAD,SANSA_C200_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_S_PAD}{\ButtonNext}
     \opt{MROBE100_PAD}{\ButtonPlay}
-    \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonUp}
+    \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonSelect+\ButtonUp}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Go to next level \\
 }
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
-\opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+\opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
 \opt{GIGABEAT_S_PAD}{\ButtonVolUp}
        \opt{HAVEREMOTEKEYMAP}{& }
@@ -87,6 +89,7 @@ information about the level format, see
 \opt{GIGABEAT_S_PAD}{\ButtonVolDown}
 \opt{MROBE100_PAD}{\ButtonDisplay}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+\opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonLeft}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Redo previously undone move \\
 \hline
@@ -96,11 +99,12 @@ information about the level format, see
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD%
-      ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+      ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Pause/resume \\
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD%
-    ,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}
+    ,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD%
+    ,SANSA_FUZE_PAD,SANSA_C200_PAD}
     {\ButtonUp/\ButtonDown}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu/\ButtonPlay}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
@@ -112,6 +116,7 @@ information about the level format, see
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
+\opt{SANSA_FUZE_PAD}{Long \ButtonHome}
 \opt{GIGABEAT_S_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Quit \\
