--- a/manual/plugins/stats.tex
+++ b/manual/plugins/stats.tex
@@ -10,6 +10,7 @@ Press %
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}%
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
     ,MROBE100_PAD}{\ButtonPower}%
+\opt{SANSA_FUZE_PAD}{\ButtonHome}%
 \opt{GIGABEAT_S_PAD}{\ButtonBack} %
 to abort counting and exit the plugin. Press it again to quit after counting
 has finished.
