--- a/manual/plugins/text_viewer.tex
+++ b/manual/plugins/text_viewer.tex
@@ -10,7 +10,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \begin{btnmap}{}{}
     \opt{PLAYER_PAD}{\ButtonLeft}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-        ,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
+        ,SANSA_E200_PAD,SANSA_FUZE_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
@@ -20,7 +20,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
 
     \opt{PLAYER_PAD}{\ButtonRight}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-        ,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown}
+        ,SANSA_E200_PAD,SANSA_FUZE_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
@@ -43,9 +43,9 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
         One screen right (Wide mode)\\
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
-      ,SANSA_C200_PAD,GIGABEAT_S_PAD}{%
+      ,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_S_PAD}{%
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonUp}
-        \opt{SANSA_E200_PAD}{\ButtonScrollBack}
+        \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollBack}
         \opt{SANSA_C200_PAD}{\ButtonUp}
         \opt{GIGABEAT_S_PAD}{\ButtonUp}
   \opt{HAVEREMOTEKEYMAP}{& }
@@ -53,9 +53,9 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     }
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
-      ,SANSA_C200_PAD,GIGABEAT_S_PAD}{%
+      ,SANSA_FUZE_PAD,SANSA_C200_PAD,GIGABEAT_S_PAD}{%
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonDown}
-        \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
+        \opt{SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonDown}
         \opt{GIGABEAT_S_PAD}{\ButtonDown}
   \opt{HAVEREMOTEKEYMAP}{& }
@@ -82,6 +82,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonRec}
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonDown}
     \opt{MROBE100_PAD}{\ButtonDisplay}
   \opt{HAVEREMOTEKEYMAP}{& }
         & Toggle autoscroll\\
@@ -92,6 +93,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
       ,MROBE100_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonSelect}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{HAVEREMOTEKEYMAP}{& }
         & Enter menu\\
@@ -101,6 +103,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
+    \opt{SANSA_FUZE_PAD}{Long \ButtonHome}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
   \opt{HAVEREMOTEKEYMAP}{&
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
