--- a/manual/plugins/vumeter.tex
+++ b/manual/plugins/vumeter.tex
@@ -15,6 +15,7 @@ and the meter scale can be changed.
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
      ,MROBE100_PAD}{\ButtonPower}
+\opt{SANSA_FUZE_PAD}{Long \ButtonHome}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
   \opt{HAVEREMOTEKEYMAP}{&
           \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
@@ -24,6 +25,7 @@ and the meter scale can be changed.
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+\opt{SANSA_FUZE_PAD}{Long \ButtonSelect}
 \opt{GIGABEAT_PAD}{\ButtonA}
 \opt{MROBE100_PAD}{\ButtonDisplay}
 \opt{GIGABEAT_S_PAD}{\ButtonNext}
@@ -32,21 +34,21 @@ and the meter scale can be changed.
 \opt{RECORDER_PAD}{\ButtonFOne}
 \opt{ONDIO_PAD}{Long \ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
-     ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+     ,SANSA_E200_PAD,SANSA_FUZE_PAD,SANSA_C200_PAD}{\ButtonSelect}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
   \opt{HAVEREMOTEKEYMAP}{& }
     & Settings\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
-\opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd}
+\opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollFwd}
 \opt{SANSA_C200_PAD}{\ButtonVolUp}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
   \opt{HAVEREMOTEKEYMAP}{& }
     & Raise Volume\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
-\opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack}
+\opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD}{\ButtonScrollBack}
 \opt{SANSA_C200_PAD}{\ButtonVolDown}
 \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
   \opt{HAVEREMOTEKEYMAP}{& }
