Correct a recording screen usability issue created in r21034. Pause used to start too, then was set to only start and now only pauses. Rec used to start and split, then only split and now again starts and splits.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23055 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/main_menu/recording_screen.tex
+++ b/manual/main_menu/recording_screen.tex
@@ -40,9 +40,7 @@ The controls for this screen are:
     %
     \ActionRecPause 
     \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecPause}
-                    & Start recording.\\
-                    & \opt{HAVEREMOTEKEYMAP}{&}
-                      While recording: pause recording (press again to
+                      & While recording: pause recording (press again to
                       continue).\\
     %
     \ActionRecExit  
@@ -55,8 +53,10 @@ The controls for this screen are:
          SANSA_E200_PAD,IPOD_4G_PAD,SANSA_C200_PAD}{
       \ActionRecNewfile
       \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecNewfile} 
-                     & While recording: close the current file and open
-                     a new one.\\
+                     & Start Recording.\\
+                    & \opt{HAVEREMOTEKEYMAP}{&}
+                        While recording: close the current file and open
+                        a new one.\\
     }
     %
     \ActionRecMenu
