New plugin theme_remove which offers a way to remove specified theme. See the manual for usage.
Flyspray: FS#10187
Author: myself, manual by David Kauffmann

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23130 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -182,6 +182,8 @@ option from the \setting{Context Menu} (see \reference{ref:Contextmenu}).}
 
 {\input{plugins/text_viewer.tex}}
 
+{\input{plugins/theme_remove.tex}}
+
 {\input{plugins/vbrfix.tex}}
 
 \opt{recorder,recorderv2fm,ondio}{\input{plugins/wavplay.tex}}
