Move to only CC-BY-SA 3.0 for future changes.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23133 a1c6a512-1295-4272-9138-f99709370657

--- a/wps/AUTHORS
+++ b/wps/AUTHORS
@@ -1,8 +1,8 @@
 All files in this directory and subdirectories are licensed under the Creative
 Commons Attribution-ShareAlike 3.0 Unported license unless another license is
 specifically stated. The full text of this license can be found in the file
-COPYING in this directory. In addition, you may use them under the terms of the
-GPLv2, or at your option any later version. 
+COPYING in this directory.
+
 
 AUTHORS
 
