Changes to build a Nano2G manual.  It is now just missing the ipodnano2g-front.* images
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23160 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/display_options.tex
+++ b/manual/configure_rockbox/display_options.tex
@@ -166,7 +166,7 @@
         \opt{recorder,recorderv2fm}{\ButtonOn+\ButtonRight/\ButtonLeft}
         \opt{ondio}{\ButtonMenu+\ButtonRight/\ButtonLeft}
         \opt{c200,e200,h100,h300,ipod1g2g,ipod3g,ipod4g,ipodcolor,ipodmini,ipodnano,
-        ipodvideo,x5,mrobe100,gigabeatf,gigabeats,e200v2}
+        ipodnano2g,ipodvideo,x5,mrobe100,gigabeatf,gigabeats,e200v2}
         {Long \ButtonRight/\ButtonLeft}\opt{h10,h10_5gb}{Long \ButtonRew/\ButtonFF}.
         Setting this option to \setting{Yes}
         will keep the list entries at their fixed positions and allow them to be
