--- a/manual/configure_rockbox/theme_settings.tex
+++ b/manual/configure_rockbox/theme_settings.tex
@@ -33,6 +33,7 @@ customize the visual apperance of Rockbox.
   \opt{ipodvideo}{\url{http://themes.rockbox.org/index.php?target=ipodvideo}}%
   \opt{ipodmini}{\url{http://themes.rockbox.org/index.php?target=ipodmini}}%
   \opt{ipodnano}{\url{http://themes.rockbox.org/index.php?target=ipodnano}}%
+  \opt{ipodnano2g}{\url{http://themes.rockbox.org/index.php?target=ipodnano2g}}%
   \opt{e200}{\url{http://themes.rockbox.org/index.php?target=e200}}%
   \opt{e200v2}{\url{http://themes.rockbox.org/index.php?target=e200v2}}%
   \opt{c200}{\url{http://themes.rockbox.org/index.php?target=c200}}%
