--- a/manual/rockbox_interface/main.tex
+++ b/manual/rockbox_interface/main.tex
@@ -156,7 +156,7 @@ described in detail in the following paragraph.
   \ButtonHold{} is off before trying to use your player. 
   }
   %
-  \opt{ipodnano}{
+  \opt{ipodnano,ipodnano2g}{
   The main controls on the \dap{} are a slightly indented wheel with a
   flat round button in the center. Hold the \dap{} with these controls on the
   top surface. There is a \ButtonHold{} switch at one end, and
@@ -480,7 +480,7 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
   {
   \subsection{Starting the original firmware}
   \label{ref:Dualboot}
-  \opt{ipod4g,ipodcolor,ipodvideo,ipodnano,ipodmini}
+  \opt{ipod4g,ipodcolor,ipodvideo,ipodnano,ipodnano2g,ipodmini}
     {
     Rockbox has a dual-boot feature. To boot into the original firmware, shut
     down the device as described above. Turn on the \ButtonHold{} switch
