--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -15,6 +15,7 @@
                   \opt{masf}{-100 -to +12}%
                   \opt{h100,h300}{-84 to 0}%
                   \opt{ipodnano}{-72 to +6}%
+                  \opt{ipodnano2g}{-74 to +6}%
                   \opt{ipodvideo}{-57 to +6}%
                   \opt{x5}{-73 to +6}
                   \opt{e200,e200v2}{-74 to +6}
