--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -10,7 +10,7 @@ change to customise your listening experience.
   where 0 dB is a reference that indicates the maximum volume that the \dap{}
   can produce without possible distortion (clipping). All values lower than
   this reference will be negative and yield a progressively softer volume.
-  \opt{player,recorder,recorderv2fm,ondio,x5,m5,ipodnano,ipodvideo,
+  \opt{player,recorder,recorderv2fm,ondio,x5,m5,ipodnano,ipodnano2g,ipodvideo,
        ipodcolor,ipod1g2g,h10,h10_5gb,sansa,sansaAMS,gigabeats,gigabeatf}{
   Values higher than 0 dB are available and can be used to raise the
   volume more than would otherwise be possible. These volume levels will
@@ -23,8 +23,8 @@ change to customise your listening experience.
   \opt{x5,m5,ipod3g,ipod4g,gigabeatf,mrobe100}{minimum of -73 dB to a maximum of +6 dB.}%
   \opt{ipodnano}{minimum of -72 dB to a maximum of +6 dB.}%
   \opt{ipodvideo}{minimum of -57 dB to a maximum of +6 dB.}%
-  \opt{ipodcolor,ipod1g2g,h10,h10_5gb,sansa,sansaAMS}{minimum of -74 dB to a maximum
-  of +6 db.}%
+  \opt{ipodnano2g,ipodcolor,ipod1g2g,h10,h10_5gb,sansa,sansaAMS}{minimum of 
+  -74 dB to a maximum of +6 db.}%
   \opt{gigabeats}{minimum of -90 dB to a maximum of +6 dB.}%
   \opt{gigabeatf}{minimum of -74 dB to a maximum of +6 dB.}%
 
@@ -36,7 +36,7 @@ change to customise your listening experience.
   \opt{masd}{The minimum setting is -15 dB and the maximum is 15 dB.}%
   \opt{masf}{The minimum setting is -12 dB and the maximum is 12 dB.}%
   \opt{h100,h300}{The minimum setting is 0 dB and the maximum is 24 dB.}%
-  \opt{ipodnano,ipodcolor}{The minimum setting is -6 dB and the maximum is 9 dB.}%
+  \opt{ipodnano,ipodnano2g,ipodcolor}{The minimum setting is -6 dB and the maximum is 9 dB.}%
   \opt{ipodvideo}{The minimum setting is -12 dB and the maximum is 12 dB.}%
   \opt{x5,sansa,sansaAMS,h10,h10_5gb}{The minimum setting is -24 dB and the maximum is 24 dB.}
 
@@ -56,7 +56,7 @@ change to customise your listening experience.
   \opt{masd}{The minimum setting is -15 dB and the maximum is 15 dB.}%
   \opt{masf}{The minimum setting is -12 dB and the maximum is 12 dB.}%
   \opt{h100,h300}{The minimum setting is 0 dB and the maximum is 6 dB.}%
-  \opt{ipodnano,ipodcolor}{The minimum setting is -6 dB and the maximum is 9 dB.}%
+  \opt{ipodnano,ipodnano2g,ipodcolor}{The minimum setting is -6 dB and the maximum is 9 dB.}%
   \opt{ipodvideo}{The minimum setting is -12 dB and the maximum is 12 dB.}%
   \opt{x5,sansa,sansaAMS,h10,h10_5gb}{The minimum setting is -24 dB and the maximum is 24 dB.}
 
