--- a/manual/getting_started/installation.tex
+++ b/manual/getting_started/installation.tex
@@ -11,14 +11,14 @@ before beginning there are a few things it is important to know.
 follow the instructions at 
 \url{http://www.rockbox.org/twiki/bin/view/Main/SansaE200RInstallation}.}}
 
-\opt{ipodnano,ipodvideo,e200,c200,e200v2}{
+\opt{ipodnano,ipodnano2g,ipodvideo,e200,c200,e200v2}{
 \begin{description}  
 \item[Supported hardware versions.] 
-    \opt{ipodnano}{
+    \opt{ipodnano,ipodnano2g}{
     The \playertype{} is available in multiple versions, not
     all of which run Rockbox.  Rockbox presently runs only on 
-    the original Ipod Nano. Rockbox does
-    \emph{not} run on the second, third, or fourth generation Ipod Nano.
+    the first and second generation Ipod Nano. Rockbox does
+    \emph{not} run on the third, fourth or fifth generation Ipod Nano.
     For information on identifying which Ipod you own, see this page on
     Apple's website: \url{http://www.info.apple.com/kbnum/n61688}.
   }
@@ -156,8 +156,8 @@ people. Rockbox Utility is a graphical application that does almost everything
 for you. However, should you encounter a problem, then the manual way is
 still available to you.\\
 
-\opt{gigabeats}{\note{The automated install is not yet available for the
-  \playertype{}. For now you can use the manual method to install Rockbox.
+\opt{gigabeats,ipodnano2g}{\note{The automated install is not yet available for the
+  \playerlongtype{}. For now you can use the manual method to install Rockbox.
   Please still read the section on the automatic install as it explains
   various important aspects of Rockbox, such as the different versions
   available.\\}}
