Update the manual for r23200.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23201 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/sudoku.tex
+++ b/manual/plugins/sudoku.tex
@@ -76,7 +76,7 @@ settings.
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
-    \opt{SANSA_FUZE_PAD}{\ButtonSelect+\ButtonUp}
+    \opt{SANSA_FUZE_PAD}{\ButtonSelect}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD}{\ButtonA}
